--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,5 @@
 @import url(fonts/clear-sans.css);
+
 html, body {
   margin: 0;
   padding: 0;
@@ -220,13 +221,15 @@ hr {
   margin-right: 15px;
   float: left;
   border-radius: 3px;
-  background: rgba(238, 228, 218, 0.35); }
+/*   background: rgba(238, 228, 218, 0.35); */
+      background: url(mary.jpg);
+      }
   .grid-cell:last-child {
     margin-right: 0; }
 
 .tile-container {
   position: absolute;
-  z-index: 2; }
+  z-index: 2;}
 
 .tile, .tile .tile-inner {
   width: 107px;
@@ -622,7 +625,10 @@ hr {
     margin-right: 10px;
     float: left;
     border-radius: 3px;
-    background: rgba(238, 228, 218, 0.35); }
+/*     background: rgba(238, 228, 218, 0.35); */
+    background: url(mary.jpg);
+        }
+    
     .grid-cell:last-child {
       margin-right: 0; }
 
